trying to fix the spacing on top of footer

--- a/public/stylesheets/cggabout.css
+++ b/public/stylesheets/cggabout.css
@@ -44,6 +44,7 @@ footer {
     padding: 2%;
     font-family: cursive;
     font-size: 2em;
+    margin-bottom: 5rem;
 }
 
 #container > h1 {
